src/app/layout/header/header.component.scss
@use 'variables' as *;

:host ::ng-deep .p-menu {
  min-width: 175px !important;
  width: auto !important;
  margin-top: 0 !important; /* Remove margin since we're setting explicit position */

  .p-menu-item-content:hover {
    color: $primary-color !important;

    .p-menu-item-icon {
      color: $primary-color !important;
    }
  }
}

.header {
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 8px 20px;
  height: 64px;
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  z-index: 1000;
  background: rgba(21, 21, 23, 0.95);
  border-bottom: 1px solid rgba(255, 255, 255, 0.1);
  transition: transform 0.3s ease-in-out;

  &.header-visible {
    transform: translateY(0);
  }

  &.header-hidden {
    transform: translateY(-100%);
  }

  .logo-description-container {
    display: flex;
    align-items: center;
    width: 100%;
  }

  .logo-description {
    display: flex;
    align-items: center;
    height: 24px;
    font-weight: 700;
    gap: 12px;

    button {
      background: transparent;
      border: none;
      padding: 0;
      cursor: pointer;
      display: flex;
      align-items: center;

      .logo {
        font-family: 'Uncial Antiqua', cursive;
        font-size: 22px;
        color: $primary-color;
        font-weight: bold;
      }
    }

    .divider {
      height: 100%;
      width: 1px;
      background-color: $surface-border;
    }
  }

  .container {
    display: flex;
    align-items: center;
    width: auto;
    height: 40px;
    padding: 0 16px;
    justify-content: flex-end;
    line-height: 150%;
    user-select: none;
    border: 1px solid rgba(52, 245, 221, 0.2);
    border-radius: 5px;
    background: rgba(24, 24, 27, 0.42);
    box-shadow: 0 8px 32px rgba(0, 0, 0, 0.3);
  }

  @media (max-width: 330px) {
    padding: 8px;
  }
}

